--- a/index.html
+++ b/index.html
@@ -78,10 +78,11 @@
     </section>
     <section id="projects" class="gallery">
       <div class="project-card">
-        <img src="Shopping cart icon.png" alt="Project 1" />
+        <img src="project-1.png" alt="Project 1" />
         <h3>Coding project</h3>
         <p>
-          I created a shopping cart app to shop for fruits like apples and oranges. I used swift playground to do it.
+          I created an interactive web app with modern design for kids my age to
+          organize their schedules and improve productivity.
         </p>
       </div>
       <div class="project-card">
